# watchfinder

./: CLAUDE.md  README.md  app.py  database.py  main.py  price_checker.py  pyproject.toml  scraper.py  seed_demo.py  watches.db  watches.db-shm  watches.db-wal
static/: app.js  style.css
templates/: index.html
