[project]
name = "watchfinder"
version = "0.1.0"
description = "Watch listing finder for vintage/birth year watches"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "apscheduler>=3.10",
    "flask-cors>=4.0",
    "cloudscraper>=1.2.71",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
]
